fixed scrollbar behavior using css and hooks

--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ li {
   height: 100%;
   position: relative;
   display: block;
-  pointer-events: none;
+  pointer-events: all;
 }
 
 .card-content-container.open {
@@ -116,8 +116,15 @@ li {
   right: 0;
   position: fixed;
   z-index: 1;
-  overflow: hidden;
+  overflow: auto;
   padding: 40px 0;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-behavior: smooth;
+}
+
+.card-content-container.open::-webkit-scrollbar {
+  display: none;
 }
 
 .card-content {
